# kcmldapmanager

./: .gitmodules  AUTHORS  ChangeLog  configure.in.in  subdirs
cmdline/: Makefile.am  main.cpp
debian/: changelog  control  copyright  rules
doc/: Makefile.am
doc/en/: Makefile.am
po/: Makefile.am
src/: Makefile.am  groupconfigbase.ui  groupconfigdlg.cpp  groupconfigdlg.h  ldap.cpp  ldap.desktop  ldap.h  ldapconfigbase.ui  ldaplogindlg.cpp  ldaplogindlg.h  ldaplogindlgbase.ui  ldapmanager.desktop  ldapmgr.cpp  ldapmgr.h  ldappasswddlg.cpp  ldappasswddlg.h  libtdeldap.cpp  libtdeldap.h  machineconfigbase.ui  machineconfigdlg.cpp  machineconfigdlg.h  serviceconfigbase.ui  serviceconfigdlg.cpp  serviceconfigdlg.h  userconfigbase.ui  userconfigdlg.cpp  userconfigdlg.h
